(executable
 (name demoAdt)
 (modules demoAdt)
 (public_name demoAdt)
 (libraries OcamlAdt.Lib))

(executable
 (name demoLet)
 (modules demoLet)
 (public_name demoLet)
 (libraries OcamlAdt.Lib))

(executable
 (name demoFunction)
 (modules demoFunction)
 (public_name demoFunction)
 (libraries OcamlAdt.Lib))

(cram
 (deps ./demoAdt.exe ./demoLet.exe ./demoFunction.exe))
